# goxel

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTERNALS.md  Info.plist  Makefile  README  README.md  SConstruct  _config.yml  config.toml  contact.markdown  downloads.markdown  flake.nix  goxel.js  goxel.rc  icon.afphoto  imgui.ini  index.html  index.markdown  params.json  proc-demo.html  screenshots.markdown  txt_to_schematic.py
.circleci/: config.yml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aur-release.yml  ci.yml  continuous.yml  hugo.yml  nightly.yml  release.yml
Goxel.app/Contents/: Info.plist
_includes/: feature.html  footer.html  head.html  header.html
_layouts/: default.html  screenshots.html
aur/: PKGBUILD
content/: _index.md  test.md
content/about/: _index.md
content/download/: _index.md
content/duke3d/: _index.md
content/gallery/: _index.html
content/live/: _index.md  about.md  goxel.js
content/releases/: 0.10.0.md  1.10.8.md
css/: main.scss
data/: goxel2.desktop  povray_template.pov
data/locale/: fr.mo
data/other/: minecraft_block_mapping.json  povray_template.pov  script_header.lua  vector3.lua
data/palettes/: Blues.gpl  Hilite.gpl  MagicaVoxel.gpl  Mineclone2.gpl  Minecraft.gpl  MinecraftComplete.gpl  Minetest.gpl  Pico8.gpl  Royal.gpl  Tango-Palette.gpl  db16.gpl  echo-palette.gpl
data/progs/: city.goxcf  intro.goxcf  planet.goxcf  test.goxcf  test2.goxcf  test3.goxcf
data/scripts/: test.js
data/shaders/: background.glsl  mesh.glsl  model3d.glsl  pbr.glsl  pos_data.glsl  shadow_map.glsl  volume.glsl
data/themes/: dark.ini  default.ini  light.ini  original.ini
doc/: BUILD_MACOS.md  README_APP.md
doc/cla/: ccla-1.0.md  icla-1.0.md  sign-cla.md
examples/: example1.gox
ext_src/: CMakeLists.txt
ext_src/cgltf/: cgltf_write.h
ext_src/cycles/src/bvh/: bvh_params.h
ext_src/cycles/src/graph/: node.cpp  node.h  node_enum.h  node_type.h
ext_src/cycles/src/render/: attribute.h  buffers.cpp  image.cpp  image.h  session.h  svm.cpp  svm.h
ext_src/cycles/src/util/: CMakeLists.txt  util_defines.h  util_image.h  util_param.cpp  util_param.h  util_path.cpp  util_sseb.h  util_string.cpp  util_ustring.h  util_vector.h  util_xml.h
ext_src/imgui/: CMakeLists.txt  ImGuizmo.cpp  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
ext_src/inih/: CMakeLists.txt  ini.c  ini.h
ext_src/json/: json-builder.h  json.c
ext_src/luaautoc/: lautoc.c  lautoc.h
ext_src/nfd/: nfd.h  nfd_glfw3.h  nfd_gtk.cpp  nfd_portal.cpp  nfd_win.cpp
ext_src/noc/: noc_file_dialog.h
ext_src/quickjs/: quickjs-libc.c
ext_src/stb/: stb_image.h
ext_src/tinyfiledialogs/: tinyfiledialogs.c  tinyfiledialogs.h
ext_src/tinyobjloader/: tinyobj_loader_c.h
ext_src/voxelizer/: voxelizer.h
ext_src/yocto/: yocto_image.cpp  yocto_math.h  yocto_scene.cpp  yocto_shape.cpp  yocto_trace.cpp  yocto_utils.h
ext_src/yocto/ext/: filesystem.hpp
js/: goxel.js.mem
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/gallery/: list.html
layouts/partials/: footer.html  header.html  top.html
layouts/shortcodes/: current-version.md  download-link.html  feature.html  features.html  screenshot.html
lib/json/: json-builder.c
lib/libvxl/: libvxl.c  libvxl.h
lib/noc/: noc_file_dialog.h
lib/yocto/: yocto_image.cpp  yocto_shape.cpp  yocto_trace.cpp
po/: fr.po
scripts/: test-proc.lua  test.js  test.lua
scripts/arch/: .SRCINFO  PKGBUILD
snap/: snapcraft.yaml
snap/gui/: Goxel++.desktop  co.magicengineering.GoxelPlusPlus.metainfo.xml  goxel.desktop  io.github.guillaumechereau.Goxel.appdata.xml  io.github.guillaumechereau.Goxel.metainfo.xml
snap/setup/: goxel.desktop
src/: action.c  action.h  actions.h  assets.c  assets.h  assets.inl  block.c  block.h  block_def.h  box.h  box_edit.c  cache.c  camera.c  camera.h  clipping.c  color.c  config.h  cycles.cpp  dialogs.c  dialogs_osx.m  dicom.c  downloader.c  downloader.h  exposed_funcs.c  exposed_funcs.h  file_format.c  file_format.h  filters.c  filters.h  framecap.cpp  framecap.h  gesture.c  gesture.h  gesture3d.c  gesture3d.h  gizmos.c  gizmos.h  glew-mx.h  goxel.c  goxel.h  (+87 more)
src/assets/: fonts.inl  icons.inl  images.inl  locale.inl  lua.inl  (+7 more)
stylesheets/: stylesheet.css
tools/: create_assets.py  create_font.py  create_ico.py  create_icons.py  create_icons.sh  update-i18n.py
(+145 files in other folders)
